Fix high contrast problem & some minor fixes

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -131,6 +131,8 @@ section
             width: 70vw
             height: 70vh
             margin-top: 20px
+        &.highContrast
+            background-color: #171717
     .confirmation
         background-color: white
         padding: 6em
